- rpmdrake:
  o remove short lived wait message when changing selected view to
    some 'update' view (security/bugfix/...) since it's too fast
  o remove short lived wait message when reloading the packages list
    (#43955)

Version 4.19 - 17 September 2008, Thierry Vignaud

- do display conflicting packages instead of silently removing them
  (needs urpmi 6.11) (#43501)
- do not display any (truncated) banner when embedded while updating
  media (like non-embedded case) (#43815)
- do not display any banner when embedded while adding media
- rpmdrake:
  o fix listing updates per importance (#41331)
    (regression introduced in 3.95 on 2007-09-14)

Version 4.18.2 - 10 September 2008, Thierry Vignaud

- fix opening the right RPM DB with --env
- workaround looping in URPM->traverse_tag when using --env

Version 4.18.1 - 9 September 2008, Thierry Vignaud

- rpmdrake:
  o fix crashing when selecting all packages (#40025)

Version 4.18 - 9 September 2008, Thierry Vignaud

- all:
  o adapt to urpmi-6.6+ new API (which workaround urpmi API breakage
    #43639)
  o do not ignore some options
  o handle --debug, --env, -q, --quiet, -v & --verbose options
- rpmdrake:
  o display a busy cursor while fetching package list on startup
  o remove short lived wait message when changing selected package
    group (#43320) since it's too fast
  o update GUI package list

Version 4.17 - 4 September 2008, Thierry Vignaud

- all
  o be able to handle --expert
  o do not display a splash text anymore
- edit-urpm-sources:
  o by default do not enable to alter the 'update' flag (unless
    --expert is given)
- gurpmi.addmedia
  o instead of discarding --update when using --distrib, give it a meaning:
    only add media flagged "update"
- rpmdrake:
  o update GUI package list

Version 4.16 - 26 August 2008, Thierry Vignaud

- MandrivaUpdate:
  o fix sorting by type of update
- rpmdrake:
  o make --mode option work again
  o workaround crashing when media's MD5SUM are garbaged (#41352)
