@@ -1,3 +1,6 @@
+- basic managment of orphan packages (#43723):
+  o display them
+  o handle --auto_orphans option
 - rpmdrake:
   o remove short lived wait message when changing selected view to
     some 'update' view (security/bugfix/...) since it's too fast
